// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile renders correctly when there are closed assessments 1`] = `
"<MemoryRouter initialEntries={{...}}>
  <Router history={{...}}>
    <Profile name=\\"yeeet\\" role=\\"staff\\" assessmentOverviews={{...}} isOpen={true} handleAssessmentOverviewFetch={[Function: handleAssessmentOverviewFetch]} onClose={[Function: onClose]}>
      <Blueprint3.Drawer className=\\"profile\\" icon=\\"user\\" isCloseButtonShown={true} isOpen={true} onClose={[Function: onClose]} title=\\"User Profile\\" position=\\"left\\" size=\\"30%\\" canOutsideClickClose={true} style={{...}} vertical={false}>
        <Blueprint3.Overlay className=\\"bp3-overlay-container\\" icon=\\"user\\" isCloseButtonShown={true} isOpen={true} onClose={[Function: onClose]} title=\\"User Profile\\" position=\\"left\\" size=\\"30%\\" canOutsideClickClose={true} style={{...}} vertical={false} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} hasBackdrop={true} lazy={true} transitionDuration={300} transitionName=\\"bp3-overlay\\" usePortal={true}>
          <Blueprint3.Portal className={[undefined]} container={{...}}>
            <Portal containerInfo={{...}}>
              <TransitionGroup appear={true} className=\\"bp3-overlay bp3-overlay-open bp3-overlay-container\\" component=\\"div\\" onKeyDown={[Function]} childFactory={[Function: childFactory]}>
                <div className=\\"bp3-overlay bp3-overlay-open bp3-overlay-container\\" onKeyDown={[Function]}>
                  <CSSTransition classNames=\\"bp3-overlay\\" timeout={300} onExited={[Function: bound bound handleExited]} in={true} appear={true} enter={[undefined]} exit={[undefined]}>
                    <Transition timeout={300} onExited={[Function]} in={true} appear={true} enter={true} exit={true} onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} mountOnEnter={false} unmountOnExit={false}>
                      <div className=\\"bp3-overlay-backdrop\\" onMouseDown={[Function]} tabIndex={0} />
                    </Transition>
                  </CSSTransition>
                  <CSSTransition classNames=\\"bp3-overlay\\" onEntering={[undefined]} onEntered={[undefined]} onExiting={[undefined]} onExited={[Function: bound bound handleExited]} timeout={300} in={true} appear={true} enter={[undefined]} exit={[undefined]}>
                    <Transition onEntering={[Function]} onEntered={[Function]} onExiting={[Function]} onExited={[Function]} timeout={300} in={true} appear={true} enter={true} exit={true} onEnter={[Function]} onExit={[Function]} mountOnEnter={false} unmountOnExit={false}>
                      <div className=\\"bp3-drawer bp3-position-left profile bp3-overlay-content\\" style={{...}} tabIndex={0}>
                        <div className=\\"bp3-drawer-header\\">
                          <Blueprint3.Icon icon=\\"user\\" iconSize={20}>
                            <span icon=\\"user\\" className=\\"bp3-icon bp3-icon-user\\" title={[undefined]}>
                              <svg fill={[undefined]} data-icon=\\"user\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                <desc>
                                  user
                                </desc>
                                <path d=\\"M10 0C4.48 0 0 4.48 0 10c0 .33.02.65.05.97.01.12.03.23.05.35.03.2.05.4.09.59.03.14.06.28.1.42l.12.48c.05.16.1.31.15.46.05.13.09.27.15.4.06.16.13.32.21.48.05.11.1.22.16.33.09.17.17.34.27.5.05.09.1.17.15.25.11.18.22.35.34.52.04.06.08.11.12.17 1.19 1.62 2.85 2.86 4.78 3.53l.09.03c.46.15.93.27 1.42.36.08.01.17.03.25.04.49.07.99.12 1.5.12s1.01-.05 1.5-.12c.08-.01.17-.02.25-.04.49-.09.96-.21 1.42-.36l.09-.03c1.93-.67 3.59-1.91 4.78-3.53.04-.05.08-.1.12-.16.12-.17.23-.35.34-.53.05-.08.1-.16.15-.25.1-.17.19-.34.27-.51.05-.11.1-.21.15-.32.07-.16.14-.32.21-.49.05-.13.1-.26.14-.39.05-.15.11-.31.15-.46.05-.16.08-.32.12-.48.03-.14.07-.28.1-.42.04-.19.06-.39.09-.59.02-.12.04-.23.05-.35.05-.32.07-.64.07-.97 0-5.52-4.48-10-10-10zm0 18a7.94 7.94 0 01-6.15-2.89c.84-.44 1.86-.82 2.67-1.19 1.45-.65 1.3-1.05 1.35-1.59.01-.07.01-.14.01-.21-.51-.45-.93-1.08-1.2-1.8l-.01-.01c0-.01-.01-.02-.01-.03a4.42 4.42 0 01-.15-.48c-.33-.07-.53-.44-.61-.79-.08-.14-.23-.48-.2-.87.05-.51.26-.74.49-.83v-.08c0-.63.06-1.55.17-2.15.02-.17.06-.33.11-.5.21-.73.66-1.4 1.26-1.86.62-.47 1.5-.72 2.28-.72.78 0 1.65.25 2.27.73.6.46 1.05 1.12 1.26 1.86.05.16.08.33.11.5.11.6.17 1.51.17 2.15v.09c.22.1.42.33.46.82.04.39-.12.73-.2.87-.07.34-.27.71-.6.78-.04.16-.09.33-.15.48 0 .01-.02.05-.02.05-.26.71-.67 1.33-1.17 1.78 0 .08.01.16.01.23.05.54-.15.94 1.31 1.59.81.36 1.84.74 2.68 1.19A7.958 7.958 0 0110 18z\\" fillRule=\\"evenodd\\" />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                          <Component>
                            <h4 className=\\"bp3-heading\\">
                              User Profile
                            </h4>
                          </Component>
                          <Blueprint3.Button aria-label=\\"Close\\" className=\\"bp3-dialog-close-button\\" icon={{...}} minimal={true} onClick={[Function: onClose]}>
                            <button type=\\"button\\" aria-label=\\"Close\\" className=\\"bp3-button bp3-minimal bp3-dialog-close-button\\" onClick={[Function: onClose]} disabled={[undefined]} onKeyDown={[Function]} onKeyUp={[Function]} tabIndex={[undefined]}>
                              <Blueprint3.Icon icon={{...}}>
                                <Blueprint3.Icon icon=\\"small-cross\\" iconSize={20}>
                                  <span icon=\\"small-cross\\" className=\\"bp3-icon bp3-icon-small-cross\\" title={[undefined]}>
                                    <svg fill={[undefined]} data-icon=\\"small-cross\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                      <desc>
                                        small-cross
                                      </desc>
                                      <path d=\\"M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z\\" fillRule=\\"evenodd\\" />
                                    </svg>
                                  </span>
                                </Blueprint3.Icon>
                              </Blueprint3.Icon>
                              <Blueprint3.Icon icon={[undefined]} />
                            </button>
                          </Blueprint3.Button>
                        </div>
                        <div className=\\"profile-content\\">
                          <div className=\\"profile-header\\">
                            <div className=\\"profile-username\\">
                              <div className=\\"name\\">
                                yeeet
                              </div>
                              <div className=\\"role\\">
                                staff
                              </div>
                            </div>
                          </div>
                          <div className=\\"profile-progress\\">
                            <div className=\\"profile-grade\\">
                              <Blueprint3.Spinner className=\\"profile-spinner progress-steelblue\\" size={144} value={0.8181818181818182}>
                                <div className=\\"bp3-spinner bp3-no-spin profile-spinner progress-steelblue\\">
                                  <div className=\\"bp3-spinner-animation\\">
                                    <svg width={144} height={144} strokeWidth=\\"2.78\\" viewBox=\\"3.61 3.61 92.78 92.78\\">
                                      <path className=\\"bp3-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                                      <path className=\\"bp3-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={50.90909090909091} />
                                    </svg>
                                  </div>
                                </div>
                              </Blueprint3.Spinner>
                              <div className=\\"type\\">
                                Grade
                              </div>
                              <div className=\\"total-value\\">
                                0.82
                                 / 
                                1.00
                              </div>
                              <div className=\\"percentage\\">
                                81.82
                                %
                              </div>
                            </div>
                            <div className=\\"profile-xp\\">
                              <Blueprint3.Spinner className=\\"profile-spinner progress-skyblue\\" size={144} value={0.4383966244725738}>
                                <div className=\\"bp3-spinner bp3-no-spin profile-spinner progress-skyblue\\">
                                  <div className=\\"bp3-spinner-animation\\">
                                    <svg width={144} height={144} strokeWidth=\\"2.78\\" viewBox=\\"3.61 3.61 92.78 92.78\\">
                                      <path className=\\"bp3-spinner-track\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" />
                                      <path className=\\"bp3-spinner-head\\" d=\\"M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90\\" pathLength={280} strokeDasharray=\\"280 280\\" strokeDashoffset={157.2489451476793} />
                                    </svg>
                                  </div>
                                </div>
                              </Blueprint3.Spinner>
                              <div className=\\"type\\">
                                XP
                              </div>
                              <div className=\\"total-value\\">
                                1039
                                 / 
                                2370
                              </div>
                              <div className=\\"percentage\\">
                                43.84
                                %
                              </div>
                            </div>
                          </div>
                          <div className=\\"profile-callouts\\">
                            <ProfileCard item={{...}} getFrac={[Function: getFrac]} parseColour={[Function: parseColour]} renderIcon={[Function: renderIcon]}>
                              <NavLink className=\\"profile-summary-navlink\\" target=\\"_blank\\" to=\\"/academy/missions/4/0\\" activeClassName=\\"profile-summary-navlink\\" aria-current=\\"page\\">
                                <Route path=\\"\\\\\\\\/academy\\\\\\\\/missions\\\\\\\\/4\\\\\\\\/0\\" exact={[undefined]} strict={[undefined]} location={[undefined]}>
                                  <Link to=\\"/academy/missions/4/0\\" className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" replace={false}>
                                    <a className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" onClick={[Function]} href=\\"/academy/missions/4/0\\">
                                      <Blueprint3.Callout className=\\"profile-summary-callout\\" icon=\\"flame\\" title=\\"A Closed Mission\\">
                                        <div className=\\"bp3-callout bp3-callout-icon profile-summary-callout\\">
                                          <Blueprint3.Icon icon=\\"flame\\" iconSize={20}>
                                            <span icon=\\"flame\\" className=\\"bp3-icon bp3-icon-flame\\" title={[undefined]}>
                                              <svg fill={[undefined]} data-icon=\\"flame\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                                <desc>
                                                  flame
                                                </desc>
                                                <path d=\\"M11.622 0c0 1.71.49 3.077 1.472 4.103C16.364 6.496 18 9.23 18 12.308c0 3.418-1.962 5.983-5.887 7.692 2.887-3 2.453-4.23-.49-8C8.5 13.5 9 14.5 9.5 16.5c-1.048 0-2 0-2.5-.5 0 .684 1.197 2.5 1.952 4-3.924-1.026-8.123-7.18-6.651-7.692.981-.342 2.126-.171 3.434.513C4.1 6.667 6.062 2.393 11.622 0z\\" fillRule=\\"evenodd\\" />
                                              </svg>
                                            </span>
                                          </Blueprint3.Icon>
                                          <Component>
                                            <h4 className=\\"bp3-heading\\">
                                              A Closed Mission
                                            </h4>
                                          </Component>
                                          <div className=\\"grade-details\\">
                                            <div className=\\"title\\">
                                              Grade
                                            </div>
                                            <div className=\\"value\\">
                                              9
                                               / 
                                              11
                                            </div>
                                            <Blueprint3.ProgressBar animate={false} className=\\"value-bar progress-steelblue\\" stripes={false} value={0.8181818181818182}>
                                              <div className=\\"bp3-progress-bar bp3-no-animation bp3-no-stripes value-bar progress-steelblue\\">
                                                <div className=\\"bp3-progress-meter\\" style={{...}} />
                                              </div>
                                            </Blueprint3.ProgressBar>
                                          </div>
                                          <div className=\\"xp-details\\">
                                            <div className=\\"title\\">
                                              XP
                                            </div>
                                            <div className=\\"value\\">
                                              468
                                               / 
                                              420
                                            </div>
                                            <Blueprint3.ProgressBar animate={false} className=\\"value-bar progress-steelblue\\" stripes={false} value={1}>
                                              <div className=\\"bp3-progress-bar bp3-no-animation bp3-no-stripes value-bar progress-steelblue\\">
                                                <div className=\\"bp3-progress-meter\\" style={{...}} />
                                              </div>
                                            </Blueprint3.ProgressBar>
                                          </div>
                                        </div>
                                      </Blueprint3.Callout>
                                    </a>
                                  </Link>
                                </Route>
                              </NavLink>
                            </ProfileCard>
                            <ProfileCard item={{...}} getFrac={[Function: getFrac]} parseColour={[Function: parseColour]} renderIcon={[Function: renderIcon]}>
                              <NavLink className=\\"profile-summary-navlink\\" target=\\"_blank\\" to=\\"/academy/quests/5/0\\" activeClassName=\\"profile-summary-navlink\\" aria-current=\\"page\\">
                                <Route path=\\"\\\\\\\\/academy\\\\\\\\/quests\\\\\\\\/5\\\\\\\\/0\\" exact={[undefined]} strict={[undefined]} location={[undefined]}>
                                  <Link to=\\"/academy/quests/5/0\\" className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" replace={false}>
                                    <a className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" onClick={[Function]} href=\\"/academy/quests/5/0\\">
                                      <Blueprint3.Callout className=\\"profile-summary-callout\\" icon=\\"lightbulb\\" title=\\"Closed (not graded) Sidequest\\">
                                        <div className=\\"bp3-callout bp3-callout-icon profile-summary-callout\\">
                                          <Blueprint3.Icon icon=\\"lightbulb\\" iconSize={20}>
                                            <span icon=\\"lightbulb\\" className=\\"bp3-icon bp3-icon-lightbulb\\" title={[undefined]}>
                                              <svg fill={[undefined]} data-icon=\\"lightbulb\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                                <desc>
                                                  lightbulb
                                                </desc>
                                                <path d=\\"M6.33 13.39c0 .34.27.61.6.61h6.13c.33 0 .6-.27.6-.61C14.03 9.78 16 9.4 16 6.09 16 2.72 13.31 0 10 0S4 2.72 4 6.09c0 3.31 1.97 3.69 2.33 7.3zM13 15H7c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1zm-1 3H8c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1z\\" fillRule=\\"evenodd\\" />
                                              </svg>
                                            </span>
                                          </Blueprint3.Icon>
                                          <Component>
                                            <h4 className=\\"bp3-heading\\">
                                              Closed (not graded) Sidequest
                                            </h4>
                                          </Component>
                                          <div className=\\"xp-details\\">
                                            <div className=\\"title\\">
                                              XP
                                            </div>
                                            <div className=\\"value\\">
                                              0
                                               / 
                                              850
                                            </div>
                                            <Blueprint3.ProgressBar animate={false} className=\\"value-bar progress-skyblue\\" stripes={false} value={0}>
                                              <div className=\\"bp3-progress-bar bp3-no-animation bp3-no-stripes value-bar progress-skyblue\\">
                                                <div className=\\"bp3-progress-meter\\" style={{...}} />
                                              </div>
                                            </Blueprint3.ProgressBar>
                                          </div>
                                        </div>
                                      </Blueprint3.Callout>
                                    </a>
                                  </Link>
                                </Route>
                              </NavLink>
                            </ProfileCard>
                            <ProfileCard item={{...}} getFrac={[Function: getFrac]} parseColour={[Function: parseColour]} renderIcon={[Function: renderIcon]}>
                              <NavLink className=\\"profile-summary-navlink\\" target=\\"_blank\\" to=\\"/academy/quests/5/0\\" activeClassName=\\"profile-summary-navlink\\" aria-current=\\"page\\">
                                <Route path=\\"\\\\\\\\/academy\\\\\\\\/quests\\\\\\\\/5\\\\\\\\/0\\" exact={[undefined]} strict={[undefined]} location={[undefined]}>
                                  <Link to=\\"/academy/quests/5/0\\" className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" replace={false}>
                                    <a className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" onClick={[Function]} href=\\"/academy/quests/5/0\\">
                                      <Blueprint3.Callout className=\\"profile-summary-callout\\" icon=\\"lightbulb\\" title=\\"Closed (partially graded) Sidequest\\">
                                        <div className=\\"bp3-callout bp3-callout-icon profile-summary-callout\\">
                                          <Blueprint3.Icon icon=\\"lightbulb\\" iconSize={20}>
                                            <span icon=\\"lightbulb\\" className=\\"bp3-icon bp3-icon-lightbulb\\" title={[undefined]}>
                                              <svg fill={[undefined]} data-icon=\\"lightbulb\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                                <desc>
                                                  lightbulb
                                                </desc>
                                                <path d=\\"M6.33 13.39c0 .34.27.61.6.61h6.13c.33 0 .6-.27.6-.61C14.03 9.78 16 9.4 16 6.09 16 2.72 13.31 0 10 0S4 2.72 4 6.09c0 3.31 1.97 3.69 2.33 7.3zM13 15H7c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1zm-1 3H8c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.45-1-1-1z\\" fillRule=\\"evenodd\\" />
                                              </svg>
                                            </span>
                                          </Blueprint3.Icon>
                                          <Component>
                                            <h4 className=\\"bp3-heading\\">
                                              Closed (partially graded) Sidequest
                                            </h4>
                                          </Component>
                                          <div className=\\"xp-details\\">
                                            <div className=\\"title\\">
                                              XP
                                            </div>
                                            <div className=\\"value\\">
                                              471
                                               / 
                                              1100
                                            </div>
                                            <Blueprint3.ProgressBar animate={false} className=\\"value-bar progress-skyblue\\" stripes={false} value={0.42818181818181816}>
                                              <div className=\\"bp3-progress-bar bp3-no-animation bp3-no-stripes value-bar progress-skyblue\\">
                                                <div className=\\"bp3-progress-meter\\" style={{...}} />
                                              </div>
                                            </Blueprint3.ProgressBar>
                                          </div>
                                        </div>
                                      </Blueprint3.Callout>
                                    </a>
                                  </Link>
                                </Route>
                              </NavLink>
                            </ProfileCard>
                            <ProfileCard item={{...}} getFrac={[Function: getFrac]} parseColour={[Function: parseColour]} renderIcon={[Function: renderIcon]}>
                              <NavLink className=\\"profile-summary-navlink\\" target=\\"_blank\\" to=\\"/academy/paths/5/0\\" activeClassName=\\"profile-summary-navlink\\" aria-current=\\"page\\">
                                <Route path=\\"\\\\\\\\/academy\\\\\\\\/paths\\\\\\\\/5\\\\\\\\/0\\" exact={[undefined]} strict={[undefined]} location={[undefined]}>
                                  <Link to=\\"/academy/paths/5/0\\" className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" replace={false}>
                                    <a className=\\"profile-summary-navlink\\" style={[undefined]} aria-current={{...}} target=\\"_blank\\" onClick={[Function]} href=\\"/academy/paths/5/0\\">
                                      <Blueprint3.Callout className=\\"profile-summary-callout\\" icon=\\"predictive-analysis\\" title=\\"Ungraded Assessment\\">
                                        <div className=\\"bp3-callout bp3-callout-icon profile-summary-callout\\">
                                          <Blueprint3.Icon icon=\\"predictive-analysis\\" iconSize={20}>
                                            <span icon=\\"predictive-analysis\\" className=\\"bp3-icon bp3-icon-predictive-analysis\\" title={[undefined]}>
                                              <svg fill={[undefined]} data-icon=\\"predictive-analysis\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                                <desc>
                                                  predictive-analysis
                                                </desc>
                                                <path d=\\"M20 8.01c0-1.26-.61-2.43-1.61-3.12C17.86 2.5 15.8.79 13.4.79c-.58 0-1.14.1-1.69.29A3.533 3.533 0 009.17 0C8.05 0 7 .55 6.32 1.45c-.15-.02-.3-.03-.45-.03-1.63 0-3.03 1.12-3.46 2.71C.97 4.65 0 6.05 0 7.66c0 .48.09.95.26 1.4-.17.44-.26.91-.26 1.39 0 1.38.72 2.64 1.89 3.29.67.7 1.59 1.09 2.54 1.09.61 0 1.19-.15 1.71-.45.68.82 1.68 1.3 2.73 1.3.66 0 1.28-.18 1.83-.52.61.49 1.34.81 2.11.91 1.3 1.43 2.3 3.28 2.31 3.3 0 0 .35.61.33.61.96-.01 1.77-.2 1.64-1.3.01.02-.92-2.89-.92-2.89.52-.26.94-.69 1.21-1.23 1.12-.66 1.84-1.91 1.84-3.26 0-.3-.03-.6-.1-.89.57-.64.88-1.51.88-2.4zm-1.54 1.28l-.18-.2-.77-.84c-.33-.37-.67-1.17-.73-1.73 0 0-.13-1.25-.13-1.26-.06-.74-1.17-.73-1.13.14 0 .02.13 1.26.13 1.26.04.36.15.77.3 1.17-.08-.01-.15-.02-.22-.02 0 0-2.57-.12-2.57-.13-.73-.03-.89 1.22-.05 1.25l2.57.13c.53.03 1.29.37 1.61.72l.61.67.02.06c.1.27.14.55.14.83 0 .93-.51 1.77-1.34 2.18l-.2.1-.09.23c-.19.48-.6.82-1.1.93l-.67.14.87 2.75c-.48-.76-1.19-1.79-2.02-2.67l-.15-.16-.21-.02c-.51-.04-.99-.21-1.42-.48l1.7-1.48c.44-.39 1.04-.55 1.24-.49 0 0 .78.22.78.23.78.2 1.03-.92.29-1.21l-.78-.23c-.69-.2-1.67.22-2.24.72l-1.91 1.66-.39.32c-.44.36-.93.55-1.5.55-.8 0-1.54-.41-1.97-1.07v-1.88c0-.5.21-.98.34-1.07 0 0 .65-.43.64-.43.87-.69.21-1.57-.64-1.14 0-.01-.65.43-.65.43-.31.2-.54.56-.7.97-.13-.13-.28-.25-.43-.35 0 0-1.91-1.26-1.91-1.28-.81-.56-1.5.63-.61 1.11 0-.02 1.89 1.28 1.89 1.28.46.31.77.97.77 1.36v.84c-.43.24-.78.36-1.24.36-.67 0-1.31-.29-1.77-.79l-.07-.08-.09-.05a2.425 2.425 0 01-1.31-2.16c0-.38.09-.74.25-1.08l.15-.31-.14-.33c-.17-.34-.25-.7-.25-1.08 0-1.13.76-2.1 1.85-2.37l.39-.09.07-.43a2.41 2.41 0 012.39-2.05c.19 0 .39.02.58.07l.4.1.22-.38A2.41 2.41 0 019.17 1.3c.55 0 1.08.19 1.5.53l-.44.45-.01-.01-.31.31c-.41.35-.92.53-1.11.5 0 0-.84-.13-.84-.14-.83-.15-1.09 1.08-.18 1.29.01 0 .84.14.84.14.03 0 .06 0 .09.01-.14.46-.18.96-.12 1.4 0 0 .21 1.24.19 1.23.13.65 1.32.44 1.16-.22 0-.01-.19-1.23-.19-1.23-.07-.48.15-1.19.45-1.5l.48-.5c.07-.06.13-.12.19-.18l.93-.95c.5-.23 1.04-.34 1.59-.34 1.93 0 3.57 1.4 3.89 3.34l.05.31.26.15a2.445 2.445 0 01.87 3.4z\\" fillRule=\\"evenodd\\" />
                                              </svg>
                                            </span>
                                          </Blueprint3.Icon>
                                          <Component>
                                            <h4 className=\\"bp3-heading\\">
                                              Ungraded Assessment
                                            </h4>
                                          </Component>
                                          <div className=\\"xp-details\\">
                                            <div className=\\"title\\">
                                              XP
                                            </div>
                                            <div className=\\"value\\">
                                              100
                                               / 
                                              0
                                            </div>
                                            <Blueprint3.ProgressBar animate={false} className=\\"value-bar progress-steelblue\\" stripes={false} value={1}>
                                              <div className=\\"bp3-progress-bar bp3-no-animation bp3-no-stripes value-bar progress-steelblue\\">
                                                <div className=\\"bp3-progress-meter\\" style={{...}} />
                                              </div>
                                            </Blueprint3.ProgressBar>
                                          </div>
                                        </div>
                                      </Blueprint3.Callout>
                                    </a>
                                  </Link>
                                </Route>
                              </NavLink>
                            </ProfileCard>
                          </div>
                        </div>
                      </div>
                    </Transition>
                  </CSSTransition>
                </div>
              </TransitionGroup>
            </Portal>
          </Blueprint3.Portal>
        </Blueprint3.Overlay>
      </Blueprint3.Drawer>
    </Profile>
  </Router>
</MemoryRouter>"
`;

exports[`Profile renders correctly when there are no closed assessments 1`] = `
"<MemoryRouter initialEntries={{...}}>
  <Router history={{...}}>
    <Profile name=\\"yeet\\" role=\\"student\\" assessmentOverviews={{...}} isOpen={true} handleAssessmentOverviewFetch={[Function: handleAssessmentOverviewFetch]} onClose={[Function: onClose]}>
      <Blueprint3.Drawer className=\\"profile\\" icon=\\"user\\" isCloseButtonShown={true} isOpen={true} onClose={[Function: onClose]} title=\\"User Profile\\" position=\\"left\\" size=\\"30%\\" canOutsideClickClose={true} style={{...}} vertical={false}>
        <Blueprint3.Overlay className=\\"bp3-overlay-container\\" icon=\\"user\\" isCloseButtonShown={true} isOpen={true} onClose={[Function: onClose]} title=\\"User Profile\\" position=\\"left\\" size=\\"30%\\" canOutsideClickClose={true} style={{...}} vertical={false} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} hasBackdrop={true} lazy={true} transitionDuration={300} transitionName=\\"bp3-overlay\\" usePortal={true}>
          <Blueprint3.Portal className={[undefined]} container={{...}}>
            <Portal containerInfo={{...}}>
              <TransitionGroup appear={true} className=\\"bp3-overlay bp3-overlay-open bp3-overlay-container\\" component=\\"div\\" onKeyDown={[Function]} childFactory={[Function: childFactory]}>
                <div className=\\"bp3-overlay bp3-overlay-open bp3-overlay-container\\" onKeyDown={[Function]}>
                  <CSSTransition classNames=\\"bp3-overlay\\" timeout={300} onExited={[Function: bound bound handleExited]} in={true} appear={true} enter={[undefined]} exit={[undefined]}>
                    <Transition timeout={300} onExited={[Function]} in={true} appear={true} enter={true} exit={true} onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} mountOnEnter={false} unmountOnExit={false}>
                      <div className=\\"bp3-overlay-backdrop\\" onMouseDown={[Function]} tabIndex={0} />
                    </Transition>
                  </CSSTransition>
                  <CSSTransition classNames=\\"bp3-overlay\\" onEntering={[undefined]} onEntered={[undefined]} onExiting={[undefined]} onExited={[Function: bound bound handleExited]} timeout={300} in={true} appear={true} enter={[undefined]} exit={[undefined]}>
                    <Transition onEntering={[Function]} onEntered={[Function]} onExiting={[Function]} onExited={[Function]} timeout={300} in={true} appear={true} enter={true} exit={true} onEnter={[Function]} onExit={[Function]} mountOnEnter={false} unmountOnExit={false}>
                      <div className=\\"bp3-drawer bp3-position-left profile bp3-overlay-content\\" style={{...}} tabIndex={0}>
                        <div className=\\"bp3-drawer-header\\">
                          <Blueprint3.Icon icon=\\"user\\" iconSize={20}>
                            <span icon=\\"user\\" className=\\"bp3-icon bp3-icon-user\\" title={[undefined]}>
                              <svg fill={[undefined]} data-icon=\\"user\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                <desc>
                                  user
                                </desc>
                                <path d=\\"M10 0C4.48 0 0 4.48 0 10c0 .33.02.65.05.97.01.12.03.23.05.35.03.2.05.4.09.59.03.14.06.28.1.42l.12.48c.05.16.1.31.15.46.05.13.09.27.15.4.06.16.13.32.21.48.05.11.1.22.16.33.09.17.17.34.27.5.05.09.1.17.15.25.11.18.22.35.34.52.04.06.08.11.12.17 1.19 1.62 2.85 2.86 4.78 3.53l.09.03c.46.15.93.27 1.42.36.08.01.17.03.25.04.49.07.99.12 1.5.12s1.01-.05 1.5-.12c.08-.01.17-.02.25-.04.49-.09.96-.21 1.42-.36l.09-.03c1.93-.67 3.59-1.91 4.78-3.53.04-.05.08-.1.12-.16.12-.17.23-.35.34-.53.05-.08.1-.16.15-.25.1-.17.19-.34.27-.51.05-.11.1-.21.15-.32.07-.16.14-.32.21-.49.05-.13.1-.26.14-.39.05-.15.11-.31.15-.46.05-.16.08-.32.12-.48.03-.14.07-.28.1-.42.04-.19.06-.39.09-.59.02-.12.04-.23.05-.35.05-.32.07-.64.07-.97 0-5.52-4.48-10-10-10zm0 18a7.94 7.94 0 01-6.15-2.89c.84-.44 1.86-.82 2.67-1.19 1.45-.65 1.3-1.05 1.35-1.59.01-.07.01-.14.01-.21-.51-.45-.93-1.08-1.2-1.8l-.01-.01c0-.01-.01-.02-.01-.03a4.42 4.42 0 01-.15-.48c-.33-.07-.53-.44-.61-.79-.08-.14-.23-.48-.2-.87.05-.51.26-.74.49-.83v-.08c0-.63.06-1.55.17-2.15.02-.17.06-.33.11-.5.21-.73.66-1.4 1.26-1.86.62-.47 1.5-.72 2.28-.72.78 0 1.65.25 2.27.73.6.46 1.05 1.12 1.26 1.86.05.16.08.33.11.5.11.6.17 1.51.17 2.15v.09c.22.1.42.33.46.82.04.39-.12.73-.2.87-.07.34-.27.71-.6.78-.04.16-.09.33-.15.48 0 .01-.02.05-.02.05-.26.71-.67 1.33-1.17 1.78 0 .08.01.16.01.23.05.54-.15.94 1.31 1.59.81.36 1.84.74 2.68 1.19A7.958 7.958 0 0110 18z\\" fillRule=\\"evenodd\\" />
                              </svg>
                            </span>
                          </Blueprint3.Icon>
                          <Component>
                            <h4 className=\\"bp3-heading\\">
                              User Profile
                            </h4>
                          </Component>
                          <Blueprint3.Button aria-label=\\"Close\\" className=\\"bp3-dialog-close-button\\" icon={{...}} minimal={true} onClick={[Function: onClose]}>
                            <button type=\\"button\\" aria-label=\\"Close\\" className=\\"bp3-button bp3-minimal bp3-dialog-close-button\\" onClick={[Function: onClose]} disabled={[undefined]} onKeyDown={[Function]} onKeyUp={[Function]} tabIndex={[undefined]}>
                              <Blueprint3.Icon icon={{...}}>
                                <Blueprint3.Icon icon=\\"small-cross\\" iconSize={20}>
                                  <span icon=\\"small-cross\\" className=\\"bp3-icon bp3-icon-small-cross\\" title={[undefined]}>
                                    <svg fill={[undefined]} data-icon=\\"small-cross\\" width={20} height={20} viewBox=\\"0 0 20 20\\">
                                      <desc>
                                        small-cross
                                      </desc>
                                      <path d=\\"M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z\\" fillRule=\\"evenodd\\" />
                                    </svg>
                                  </span>
                                </Blueprint3.Icon>
                              </Blueprint3.Icon>
                              <Blueprint3.Icon icon={[undefined]} />
                            </button>
                          </Blueprint3.Button>
                        </div>
                        <div className=\\"profile-content\\">
                          <div className=\\"profile-header\\">
                            <div className=\\"profile-username\\">
                              <div className=\\"name\\">
                                yeet
                              </div>
                              <div className=\\"role\\">
                                student
                              </div>
                            </div>
                          </div>
                          <div className=\\"profile-placeholder\\">
                            There are no closed assessments to render grade and XP of.
                          </div>
                        </div>
                      </div>
                    </Transition>
                  </CSSTransition>
                </div>
              </TransitionGroup>
            </Portal>
          </Blueprint3.Portal>
        </Blueprint3.Overlay>
      </Blueprint3.Drawer>
    </Profile>
  </Router>
</MemoryRouter>"
`;
